--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,13 @@ div#agendaSpace {
   position: fixed;
   background-color: rgb(237, 151, 42);
   border-right: 3px black solid;
+  overflow: auto;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
+ul.agendaLists {
+  list-style-type: square;
+  text-align: right;
+  border-bottom: 3px rgba(49, 49, 49, .5) solid;
 }
 /*-----Agenda-----*/
 
@@ -221,10 +223,57 @@ input#groupKey {
   from{opacity: 0}
   to {opacity: 1}
 }
-/*-----for the modal-----*/
+/*-----end of the modal-----*/
+
+
+/*-------for agenda lists-------*/
+/* #create_agenda_modal {
+  background-color: white;
+  display: inline-block;
+  position: relative;
+  top:30%;
+  left:50%;
+  transform: translate(-50%, 0);
+  animation:modalOpen;
+  animation-duration:1s;
+}
+
+#create_agenda_modal{
+  width: 300px;
+}
+.floatClearRight {
+  float:right;
+  clear:right;
+  margin:5%;
+}
+.members {
+  margin-top: .5%;
+} */
+/*-------end of agenda lists-------*/
+
+
+.individualAgenda, .agenda_groupTitle {
+  margin:.6%;
+}
+div.individualAgenda {
+  text-align: right;
+  border:1px solid black;
+  width:90%;
+  margin-left:auto;
+  margin-right:auto;
+  border-radius: 10px;
+  padding:3%;
+  box-shadow:  0px 0px 8px #000000;
+}
+
+.agendaDesc {
+  margin: .1rem;
+}
+
+
+
 .errorText {
   color: red;
-  margin: 0;
   height: 1em;
-  margin:1em 1em;
+  margin:0 1em;
 }
