--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Audiowide|Roboto");
+@import url("https://fonts.googleapis.com/css?family=Audiowide");
 
 body {
   background-color: rgb(244, 184, 105);
