updated fonts on page and adjusted size of the text fields on roomCreation.html

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Audiowide");
+@import url("https://fonts.google.com/specimen/Roboto");
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
