--- a/css/room_creation.css
+++ b/css/room_creation.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Audiowide");
+@import url("https://fonts.google.com/specimen/Roboto");
+
 body {
     margin: 0;
 }
@@ -12,6 +15,7 @@ body {
     border-bottom: 3px black solid;
     clear: left;
     float: left;
+    font-family: 'Audiowide', cursive;
 }
 
 #headerLeft {
@@ -23,7 +27,6 @@ body {
 
 #room {
   font-size: 35pt;
-  font-family: 'Audiowide', cursive;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -61,12 +64,11 @@ body {
     margin-right: 2%;
     transform: translateY(-50%);
     font-size: 18pt;
-    font-family: sans-serif;
     float: right;
 }
 
 a.topButton {
-    font: 18pt Arial;
+    font: 18pt;
     text-decoration: none;
     background-color: #EEEEEE;
     color: #333333;
@@ -111,6 +113,7 @@ h3 {
     margin: 0 auto;
     width: 66%;
     min-width: 400px;
+    text-align: center;
 }
 
 #content p {
